# py_template

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: create-diagram.yml  tests.yaml
src/package_name/: __init__.py  source.py
tests/: conftest.py  test_package.py
