[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=package_name"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
pretty = true
color_output = true
error_summary = true
lineprecision_report = "mypyCoverageReport"
linecount_report = "mypyCoverageReport"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = 'PyYAML'
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# any 3rd party unhinted modules
module = [
    'pkg_resources'
]
ignore_missing_imports = true