[metadata]
name = package_name
version = 0.0.1
description = package description
author = Jamie Harding
# license = Something
# license_file = LICENSE
platforms = unix, linux, osx, cygwin
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    package_name
install_requires = 
    PyYAML>=5.4
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
package_name = py.typed

[flake8]
max-line-length = 120